[metadata]
name = trading 
description = personal trading project 
author = Gustavo Barrios 
license = MIT 
license_file = LICENSE 
platforms = unix
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires = 
    ciso8601>=2.2.0
    requests>=2.27.1
python_requires = >=3.10
include_package_data = True
zip_safe = False
package_dir = 
    =.

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
trading = py.typed

[flake8]
ignore = E302,E402,F403,E265,E201,E124,E202,E123,E731,F405
max-line-length = 120 
exclude = tests/* 
max-complexity = 15 


